Don't call WebCacheManager::Remove(RPH_id) to clear webview's cache.

We already call WebCacheManager::ClearCacheForProcess(RPH_id), which
seems to be sufficient in my local testing.
I remember that clearing webview cache didn't seem to work without calling
WCM::Remove() when I implemented it.

After r380598, Calling WCM::Remove also deletes mojo service associated
with the RPH, so the next call to WCM::Remove with the same RPH will
result in a nullptr access.

BUG=615429
Test=Added a test, see http://crbug.com/615429#c2 for repro.

Review-Url: https://codereview.chromium.org/2033993002
Cr-Commit-Position: refs/heads/master@{#397803}

Former-commit-id: d0dae71f785f35d100d1454e3a7331a896bdf2f2